# lzw

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
compress/: CMakeLists.txt
compress/src/: Huffman.cpp  LZW.cpp  absolute_precision_type.cpp  argument_parser.cpp  arithmetic.cpp  compress.cpp  decompress.cpp  entropy.cpp  log.cpp  repeator.cpp  transformer.cpp  uncompress.cpp  utils.cpp
compress/src/include/: Huffman.h  LZW.h  LZW.inl  absolute_precision_type.h  arithmetic.h  log.hpp  lzw.h  lzw.inl  numeric.h  numeric.inl  repeator.h  transformer.h  utils.h
compress/tests/: Huffman.cpp  absolute_precision_type.cpp  arithmetic.cpp  bitwise.cpp  human_readable.cpp  repeator.cpp  transformer.cpp
resources/: data  data2_part_aa  data2_part_ab  data3
scripts/animations/: lzw.py
src/: LZW.cpp  argument_parser.cpp  log.cpp  uncompress.cpp
src/include/: LZW.h  LZW.inl  argument_parser.h  log.hpp
